--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-	numpy,
-	pandas,
+    "matplotlib>=3.10.0",
+    "numpy",
+    "pandas",
 ]
